grammar/.antlr/BuildDSLParser.java
// Generated from d:/PLP/Build Configuration & Dependency Resolution DSL - automated executor (TAMBAHAN)/Build Configuration & Dependency Resolution DSL - automated executor/grammar/BuildDSL.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BuildDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, ID=22, STRING=23, WS=24;
	public static final int
		RULE_project = 0, RULE_decl = 1, RULE_taskDecl = 2, RULE_taskBody = 3, 
		RULE_command = 4, RULE_taskCall = 5, RULE_ifDecl = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"project", "decl", "taskDecl", "taskBody", "command", "taskCall", "ifDecl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROJECT'", "'FROM'", "'{'", "'}'", "'DEPEND'", "'VERSION'", "'TASK'", 
			"':'", "'END'", "'RUN'", "'ECHO'", "'MKDIR'", "'COPY'", "'TO'", "'DELETE'", 
			"'ORGANIZE'", "'FIX_DEPENDENCIES'", "'DO'", "'IF'", "'ENV'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "ID", "STRING", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BuildDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BuildDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProjectContext extends ParserRuleContext {
		public Token name;
		public Token sourcePath;
		public TerminalNode EOF() { return getToken(BuildDSLParser.EOF, 0); }
		public List<TerminalNode> STRING() { return getTokens(BuildDSLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BuildDSLParser.STRING, i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TaskDeclContext> taskDecl() {
			return getRuleContexts(TaskDeclContext.class);
		}
		public TaskDeclContext taskDecl(int i) {
			return getRuleContext(TaskDeclContext.class,i);
		}
		public List<IfDeclContext> ifDecl() {
			return getRuleContexts(IfDeclContext.class);
		}
		public IfDeclContext ifDecl(int i) {
			return getRuleContext(IfDeclContext.class,i);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_project);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			match(T__0);
			setState(15);
			((ProjectContext)_localctx).name = match(STRING);
			setState(18);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(16);
				match(T__1);
				setState(17);
				((ProjectContext)_localctx).sourcePath = match(STRING);
				}
			}

			setState(20);
			match(T__2);
			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 524448L) != 0)) {
				{
				setState(24);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(21);
					decl();
					}
					break;
				case T__6:
					{
					setState(22);
					taskDecl();
					}
					break;
				case T__18:
					{
					setState(23);
					ifDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(29);
			match(T__3);
			setState(30);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(BuildDSLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BuildDSLParser.STRING, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__4);
			setState(33);
			match(STRING);
			setState(34);
			match(T__5);
			setState(35);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BuildDSLParser.ID, 0); }
		public TaskBodyContext taskBody() {
			return getRuleContext(TaskBodyContext.class,0);
		}
		public TaskDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskDecl; }
	}

	public final TaskDeclContext taskDecl() throws RecognitionException {
		TaskDeclContext _localctx = new TaskDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_taskDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(T__6);
			setState(38);
			match(ID);
			setState(39);
			match(T__7);
			setState(40);
			taskBody();
			setState(41);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskBodyContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<TaskCallContext> taskCall() {
			return getRuleContexts(TaskCallContext.class);
		}
		public TaskCallContext taskCall(int i) {
			return getRuleContext(TaskCallContext.class,i);
		}
		public TaskBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskBody; }
	}

	public final TaskBodyContext taskBody() throws RecognitionException {
		TaskBodyContext _localctx = new TaskBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_taskBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 506880L) != 0)) {
				{
				setState(45);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__14:
				case T__15:
				case T__16:
					{
					setState(43);
					command();
					}
					break;
				case T__17:
					{
					setState(44);
					taskCall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrganizeCmdContext extends CommandContext {
		public OrganizeCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CopyCmdContext extends CommandContext {
		public List<TerminalNode> STRING() { return getTokens(BuildDSLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(BuildDSLParser.STRING, i);
		}
		public CopyCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FixDepCmdContext extends CommandContext {
		public FixDepCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MkdirCmdContext extends CommandContext {
		public TerminalNode STRING() { return getToken(BuildDSLParser.STRING, 0); }
		public MkdirCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RunCmdContext extends CommandContext {
		public TerminalNode STRING() { return getToken(BuildDSLParser.STRING, 0); }
		public RunCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EchoCmdContext extends CommandContext {
		public TerminalNode STRING() { return getToken(BuildDSLParser.STRING, 0); }
		public EchoCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeleteCmdContext extends CommandContext {
		public TerminalNode STRING() { return getToken(BuildDSLParser.STRING, 0); }
		public DeleteCmdContext(CommandContext ctx) { copyFrom(ctx); }
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_command);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				_localctx = new RunCmdContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(T__9);
				setState(51);
				match(STRING);
				}
				break;
			case T__10:
				_localctx = new EchoCmdContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				match(T__10);
				setState(53);
				match(STRING);
				}
				break;
			case T__11:
				_localctx = new MkdirCmdContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				match(T__11);
				setState(55);
				match(STRING);
				}
				break;
			case T__12:
				_localctx = new CopyCmdContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(56);
				match(T__12);
				setState(57);
				match(STRING);
				setState(58);
				match(T__13);
				setState(59);
				match(STRING);
				}
				break;
			case T__14:
				_localctx = new DeleteCmdContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				match(T__14);
				setState(61);
				match(STRING);
				}
				break;
			case T__15:
				_localctx = new OrganizeCmdContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(62);
				match(T__15);
				}
				break;
			case T__16:
				_localctx = new FixDepCmdContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(63);
				match(T__16);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TaskCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BuildDSLParser.ID, 0); }
		public TaskCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_taskCall; }
	}

	public final TaskCallContext taskCall() throws RecognitionException {
		TaskCallContext _localctx = new TaskCallContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_taskCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__17);
			setState(67);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfDeclContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(BuildDSLParser.STRING, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TaskDeclContext> taskDecl() {
			return getRuleContexts(TaskDeclContext.class);
		}
		public TaskDeclContext taskDecl(int i) {
			return getRuleContext(TaskDeclContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<TaskCallContext> taskCall() {
			return getRuleContexts(TaskCallContext.class);
		}
		public TaskCallContext taskCall(int i) {
			return getRuleContext(TaskCallContext.class,i);
		}
		public IfDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifDecl; }
	}

	public final IfDeclContext ifDecl() throws RecognitionException {
		IfDeclContext _localctx = new IfDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__18);
			setState(70);
			match(T__19);
			setState(71);
			match(T__20);
			setState(72);
			match(STRING);
			setState(73);
			match(T__7);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 507040L) != 0)) {
				{
				setState(78);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(74);
					decl();
					}
					break;
				case T__6:
					{
					setState(75);
					taskDecl();
					}
					break;
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__14:
				case T__15:
				case T__16:
					{
					setState(76);
					command();
					}
					break;
				case T__17:
					{
					setState(77);
					taskCall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}